--- a/style/spark.css
+++ b/style/spark.css
@@ -147,3 +147,9 @@ a:hover {
     background-color: #242424;
     border-radius: 0.25rem;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
