--- a/templates/edit.html
+++ b/templates/edit.html
@@ -31,7 +31,7 @@
 </table>
 <hr>
 {% else %}
-<form method="post" action="">
+<form class="needs-validation" method="post" action="" novalidate>
     <input type="hidden" name="serial" value="{{ serial }}">
     <table class="table table-striped table-hover table-sm">
         <tr>
@@ -91,11 +91,12 @@
             </td>
             <td><input class="form-control form-control-sm" type="text"
                        name="record[{{ r['id'] }}][content]" value="{{ r['content'] }}"></td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="text"
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="number"
                                         id="priority_field_{{ r['id'] }}" name="record[{{ r['id'] }}][prio]"
-                                        value="{{ r['prio'] }}"></td>
+                                        min="0" max="65535" pattern="[0-9]*" value="{{ r['prio'] }}"></td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="text"
-                                        name="record[{{ r['id'] }}][ttl]" value="{{ r['ttl'] }}"></td>
+                                        min="0" max="2147483647" pattern="[0-9]*" name="record[{{ r['id'] }}][ttl]"
+                                        value="{{ r['ttl'] }}"></td>
             {% endif %}
 
             {% if domain_type == "SLAVE" or perm_edit == "none" or (perm_edit == "own" or perm_edit ==
@@ -193,9 +194,10 @@
             <td><input class="form-control form-control-sm" type="text" name="content" value="" required>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="prio" value=""></td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="ttl"
-                                        value="{{ dns_ttl }}" required>
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="prio" value="0"
+                                        min="0" max="65535" pattern="[0-9]*"></td>
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="ttl"
+                                        min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
                 <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
             </td>
         </tr>
