--- a/templates/edit_zone_templ_record.html
+++ b/templates/edit_zone_templ_record.html
@@ -3,7 +3,8 @@
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zones.php">{% trans %}Zones{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans %}Zone templates{% endtrans %}</a></li>
-        <li class="breadcrumb-item"><a href="edit_zone_templ.php?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a></li>
+        <li class="breadcrumb-item"><a href="edit_zone_templ.php?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">{% trans %}Edit record{% endtrans %}</li>
     </ol>
 </nav>
@@ -31,10 +32,10 @@
                     {% set found_selected_type = false %}
                     {% for type_available in record_types %}
                     {% if type_available == record["type"] %}
-                        {% set add = " SELECTED" %}
-                        {% set found_selected_type = true %}
+                    {% set add = " SELECTED" %}
+                    {% set found_selected_type = true %}
                     {% else %}
-                        {% set add = "" %}
+                    {% set add = "" %}
                     {% endif %}
                     <option {{ add }} value="{{ type_available }}">{{ type_available }}</option>
                     {% endfor %}
@@ -48,8 +49,10 @@
                        required>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
-            <td><input class="form-control form-control-sm" type="text" name="prio" value="{{ record['prio'] }}"></td>
-            <td><input class="form-control form-control-sm" type="text" name="ttl" value="{{ record['ttl'] }}"></td>
+            <td><input class="form-control form-control-sm" type="number" name="prio" min="0" max="65535" pattern="[0-9]*"
+                       value="{{ record['prio'] }}"></td>
+            <td><input class="form-control form-control-sm" type="number" name="ttl" min="0" max="2147483647"
+                       pattern="[0-9]*" value="{{ record['ttl'] }}" required></td>
         </tr>
     </table>
     <p class="pt-3">
