Newlines are breaking translation

--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -5,8 +5,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-search display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="search.php" class="btn btn-light btn-block">{% trans %}Search zones and
-                    records{% endtrans %}</a></div>
+                <div class="row"><a href="search.php" class="btn btn-light btn-block">{% trans %}Search zones and records{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -28,8 +27,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-files display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_zone_templ.php" class="btn btn-light btn-block">{% trans %}List zone
-                    templates{% endtrans %}</a></div>
+                <div class="row"><a href="list_zone_templ.php" class="btn btn-light btn-block">{% trans %}List zone templates{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -39,8 +37,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-hdd-rack display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_supermasters.php" class="btn btn-light btn-hdd-rack">{% trans %}List
-                    supermasters{% endtrans %}</a></div>
+                <div class="row"><a href="list_supermasters.php" class="btn btn-light btn-hdd-rack">{% trans %}List supermasters{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -50,8 +47,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-plus-circle display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_zone_master.php" class="btn btn-light btn-block">{% trans %}Add master
-                    zone{% endtrans %}</a></div>
+                <div class="row"><a href="add_zone_master.php" class="btn btn-light btn-block">{% trans %}Add master zone{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -61,8 +57,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-plus-circle-dotted display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_zone_slave.php" class="btn btn-light btn-block">{% trans %}Add slave
-                    zone{% endtrans %}</a></div>
+                <div class="row"><a href="add_zone_slave.php" class="btn btn-light btn-block">{% trans %}Add slave zone{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -72,8 +67,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-hdd-network display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_supermaster.php" class="btn btn-light btn-block">{% trans %}Add
-                    supermaster{% endtrans %}</a></div>
+                <div class="row"><a href="add_supermaster.php" class="btn btn-light btn-block">{% trans %}Add supermaster{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -83,8 +77,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-collection display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="bulk_registration.php" class="btn btn-light btn-block">{% trans %}Bulk
-                    registration{% endtrans %}</a></div>
+                <div class="row"><a href="bulk_registration.php" class="btn btn-light btn-block">{% trans %}Bulk registration{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -105,8 +98,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-key display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="change_password.php" class="btn btn-light btn-block">{% trans %}Change
-                    password{% endtrans %}</a></div>
+                <div class="row"><a href="change_password.php" class="btn btn-light btn-block">{% trans %}Change password{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -115,8 +107,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-people display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="users.php" class="btn btn-light btn-block">{% trans %}User administration{% endtrans
-                    %}</a></div>
+                <div class="row"><a href="users.php" class="btn btn-light btn-block">{% trans %}User administration{% endtrans %}</a></div>
             </div>
         </div>
     </div>
@@ -125,8 +116,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-person-lock display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_perm_templ.php" class="btn btn-light btn-block">{% trans %}List permission templates{% endtrans
-                    %}</a></div>
+                <div class="row"><a href="list_perm_templ.php" class="btn btn-light btn-block">{% trans %}List permission templates{% endtrans %}</a></div>
             </div>
         </div>
     </div>
