--- a/install/templates/step3.html
+++ b/install/templates/step3.html
@@ -23,8 +23,11 @@
         <tr id="password_row">
             <td>{% trans %}Password{% endtrans %}</td>
             <td>
-                <input class="form-control form-control-sm" type="password" id="userpass" name="pass" value="" autocomplete="off" required>
-                <div class="invalid-feedback">{% trans %}Provide user password{% endtrans %}</div>
+                <div class="input-group">
+                    <input class="form-control form-control-sm" type="password" id="userpass" name="pass" value="" autocomplete="off" required>
+                    <div class="invalid-feedback">{% trans %}Provide user password{% endtrans %}</div>
+                    <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('userpass', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
+                </div>
             </td>
             <td>{% trans %}The password for this username.{% endtrans %}</td>
         </tr>
@@ -83,8 +86,11 @@
         <tr>
             <td>{% trans %}Poweradmin administrator password{% endtrans %}</td>
             <td>
-                <input class="form-control form-control-sm" type="password" name="pa_pass" value="" autocomplete="off" required>
-                <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
+                <div class="input-group">
+                    <input class="form-control form-control-sm" type="password" id="pa_pass" name="pa_pass" value="" autocomplete="off" required>
+                    <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
+                    <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('pa_pass', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
+                </div>
             </td>
             <td>{% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin
                 using the web interface.{% endtrans %}
