--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,29 +1,45 @@
 </main>
 <footer class="footer py-3">
     <div class="container">
-        {% if custom_footer %}
-            {% include ('custom/footer.html') %}
-        {% else %}
-            <a href="https://www.poweradmin.org/">a complete(r) <strong>Poweradmin</strong>
-                {% if version %}
+        <div class="row">
+            <div class="col-md-6">
+                {% if custom_footer %}
+                {% include ('custom/footer.html') %}
+                {% else %}
+                <a href="https://www.poweradmin.org/">a complete(r) <strong>Poweradmin</strong>
+                    {% if version %}
                     v{{ version }}
+                    {% endif %}
+                </a>
                 {% endif %}
-            </a>
-        {% endif %}
+            </div>
+            <div class="col-md-6 d-flex justify-content-end">
+                {% if show_theme_switcher %}
+                {% if iface_style == 'ignite' %}
+                <a class="btn btn-outline-secondary btn-sm" href="switch_theme.php?theme=spark"><i
+                        class="bi bi-moon"></i></a>
+                {% else %}
+                <a class="btn btn-outline-secondary btn-sm" href="switch_theme.php?theme=ignite"><i
+                        class="bi bi-sun"></i></a>
+                {% endif %}
+                {% endif %}
+            </div>
+        </div>
     </div>
 </footer>
 
+
 {% if db_queries %}
-    <div class="container pt-3 pb-3">
+<div class="container pt-3 pb-3">
     <code>
         {% for query in db_queries %}
-            {{ query }}<br>
+        {{ query }}<br>
         {% endfor %}
     </code>
-    </div>
+</div>
 {% endif %}
 {% if display_stats %}
-    {{ display_stats | raw }}
+{{ display_stats | raw }}
 {% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -33,7 +49,7 @@
     const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
     const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
 
-    const popoverOptions = { html: true };
+    const popoverOptions = {html: true};
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
     const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl, popoverOptions));
 
