Fix the back link.

--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -49,4 +49,4 @@
 <p>{% trans %}Are you sure?{% endtrans %}</p>
 <input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_record.php?id={{ record_id }}&confirm=1'"
        value="{% trans %}Yes{% endtrans %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='edit.php?id={{ zid }}'" value="{% trans %}No{% endtrans %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='edit.php?id={{ zone_id }}'" value="{% trans %}No{% endtrans %}">
