Updated installer steps.

--- a/install/templates/step1.html
+++ b/install/templates/step1.html
@@ -1,3 +1,5 @@
+<h5>{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Choose a language for installation{% endtrans %}</h5>
+<hr>
 <form method="post">
     <input class="form-check-input" type="radio" name="language" value="en_EN" checked> I prefer to proceed in english.<br>
     <input class="form-check-input" type="radio" name="language" value="nl_NL"> Ik ga graag verder in het Nederlands.<br>
