--- a/install/templates/step4.html
+++ b/install/templates/step4.html
@@ -1,18 +1,22 @@
 <p>{% trans %}Now we will gather all details for the configuration itself.{% endtrans %}</p>
-<form method="post">
+<form class="needs-validation" method="post" novalidate>
     <table class="table table-sm">
         {% if db_type != 'sqlite' %}
         <tr>
             <td>{% trans %}Username{% endtrans %}</td>
-            <td class="w-25"><input class="form-control form-control-sm" type="text" name="pa_db_user" value=""></td>
+            <td class="w-25">
+                <input class="form-control form-control-sm" type="text" name="pa_db_user" value="" required>
+                <div class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</div>
+            </td>
             <td>{% trans %}The username for Poweradmin. This new user will have limited rights only.{% endtrans %}</td>
         </tr>
         <tr>
             <td>{% trans %}Password{% endtrans %}</td>
             <td>
                 <div class="input-group">
-                    <input class="form-control form-control-sm" type="password" id="pa_db_pass" name="pa_db_pass" value="" autocomplete="off">
+                    <input class="form-control form-control-sm" type="password" id="pa_db_pass" name="pa_db_pass" value="" autocomplete="off" required>
                     <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('pa_db_pass', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
+                    <div class="invalid-feedback">{% trans %}Provide the user password{% endtrans %}</div>
                 </div>
             </td>
             <td>{% trans %}The password for this username.{% endtrans %}</td>
@@ -20,21 +24,30 @@
         {% endif %}
         <tr>
             <td>{% trans %}Hostmaster{% endtrans %}</td>
-            <td><input class="form-control form-control-sm" type="text" name="dns_hostmaster" value=""></td>
+            <td>
+                <input class="form-control form-control-sm" type="text" name="dns_hostmaster" value="" required>
+                <div class="invalid-feedback">{% trans %}Provide the DNS hostmaster{% endtrans %}</div>
+            </td>
             <td>{% trans %}When creating SOA records and no hostmaster is provided, this value here will be used. Should
                 be in the form "hostmaster.example.net".{% endtrans %}
             </td>
         </tr>
         <tr>
             <td>{% trans %}Primary nameserver{% endtrans %}</td>
-            <td><input class="form-control form-control-sm" type="text" name="dns_ns1" value=""></td>
+            <td>
+                <input class="form-control form-control-sm" type="text" name="dns_ns1" value="" required>
+                <div class="invalid-feedback">{% trans %}Provide the primary nameserver{% endtrans %}</div>
+            </td>
             <td>{% trans %}When creating new zones using the template, this value will be used as primary nameserver.
                 Should be like "ns1.example.net".{% endtrans %}
             </td>
         </tr>
         <tr>
             <td>{% trans %}Secondary nameserver{% endtrans %}</td>
-            <td><input class="form-control form-control-sm" type="text" name="dns_ns2" value=""></td>
+            <td>
+                <input class="form-control form-control-sm" type="text" name="dns_ns2" value="" required>
+                <div class="invalid-feedback">{% trans %}Provide the secondary nameserver{% endtrans %}</div>
+            </td>
             <td>{% trans %}When creating new zones using the template, this value will be used as secondary nameserver.
                 Should be like "ns2.example.net".{% endtrans %}
             </td>
@@ -48,6 +61,7 @@
     <input type="hidden" name="db_name" value="{{ db_name }}">
     <input type="hidden" name="db_type" value="{{ db_type }}">
     <input type="hidden" name="db_charset" value="{{ db_charset }}">
+    <input type="hidden" name="db_collation" value="{{ db_collation }}">
     <input type="hidden" name="pa_pass" value="{{ pa_pass }}">
     <input type="hidden" name="step" value="{{ next_step }}">
     <input type="hidden" name="language" value="{{ language }}">
