--- a/install/templates/step7.html
+++ b/install/templates/step7.html
@@ -1,3 +1,5 @@
+<h5>{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Installation complete{% endtrans %}</h5>
+<hr>
 <p>{% trans %}Now we have finished the configuration.{% endtrans %}</p>
 <p>{% trans %}If you want support for the URLs used by other dynamic DNS providers, run "cp install/htaccess.dist .htaccess" and enable mod_rewrite in Apache.{% endtrans %}</p>
 <p>{% trans %}You should (must!) remove the directory "install/" from the Poweradmin root directory. You will not be able to use Poweradmin if it exists. Do it now.{% endtrans %}</p>
