Skip creation of custom user for SQLite.

--- a/install/templates/step4.html
+++ b/install/templates/step4.html
@@ -1,3 +1,5 @@
+<h5>{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Setup of account and name servers{% endtrans %}</h5>
+<hr>
 <p>{% trans %}Now we will gather all details for the configuration itself.{% endtrans %}</p>
 <form class="needs-validation" method="post" novalidate>
     <table class="table table-sm">
