Prepare code for accepting page number.

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,6 +10,8 @@
 <form class="needs-validation" name="search_form" action="search.php" method="POST" novalidate>
     <input type="hidden" name="zone_sort_by" value="{{ zone_sort_by }}">
     <input type="hidden" name="record_sort_by" value="{{ record_sort_by }}">
+    <input type="hidden" name="zone_page" value="{{ zone_page }}">
+    <input type="hidden" name="record_page" value="{{ record_page }}">
 
     <div class="row pt-3 pb-3">
         <div class="col-sm-4">
