Update Simplified Chinese support

--- a/install/templates/step1.html
+++ b/install/templates/step1.html
@@ -8,6 +8,7 @@
     <input class="form-check-input" type="radio" name="language" value="pl_PL"> Chcę kontynuować po polsku.<br>
     <input class="form-check-input" type="radio" name="language" value="fr_FR"> Je préfère continuer en français.<br>
     <input class="form-check-input" type="radio" name="language" value="nb_NO"> Jeg ønsker å forsette på norsk.<br>
+    <input class="form-check-input" type="radio" name="language" value="zh_CN"> 简体中文<br>
     <input type="hidden" name="step" value="{{ next_step }}">
     <br>
     <input type="submit" name="submit" class="btn btn-primary btn-sm" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
