--- a/templates/edit.html
+++ b/templates/edit.html
@@ -53,6 +53,7 @@
             <th><a href="edit.php?id={{ zone_id }}&record_sort_by=ttl">{% trans %}TTL{% endtrans %}</a>
                 {% if record_sort_by == 'ttl' %}<i class="bi bi-arrow-down"></i>{% endif %}
             </th>
+            <th>{% trans %}Enabled{% endtrans %}</th>
             <th>&nbsp;</th>
         </tr>
         {% for r in records %}
@@ -97,7 +98,19 @@
             <td class="col-sm-1"><input class="form-control form-control-sm" type="text"
                                         min="0" max="2147483647" pattern="[0-9]*" name="record[{{ r['id'] }}][ttl]"
                                         value="{{ r['ttl'] }}"></td>
+            <td>
+                <div class="form-check form-switch" style="display: flex; justify-content: center; align-items: center;" >
+                    {% if r['disabled'] == 0 %}
+                    <input class="form-check-input" type="checkbox" role="switch" name="record[{{ r['id'] }}][disabled_checkbox]"  onchange="updateValue(this,{{ r['id'] }})" value="0" id="flexSwitchCheckChecked_{{ r['id'] }}" checked>
+                    <input type="hidden" name="record[{{ r['id'] }}][disabled]" value="0">
+                    {% else %}
+                    <input class="form-check-input" type="checkbox" role="switch"  name="record[{{ r['id'] }}][disabled_checkbox]" onchange="updateValue(this,{{ r['id'] }})" value="1" id="flexSwitchCheckChecked2_{{ r['id'] }}">
+                    <input type="hidden" name="record[{{ r['id'] }}][disabled]" value="1">
+                    {% endif %}
+                </div>
+            </td>
             {% endif %}
+
 
             {% if domain_type == "SLAVE" or perm_edit == "none" or (perm_edit == "own" or perm_edit ==
             "own_as_client") and user_is_zone_owner == "0" %}
@@ -416,3 +429,10 @@
         {% endif %}
     </table>
 </div>
+<script>
+    function updateValue(checkbox,rid) {
+
+        var hiddenInput = document.querySelector('input[type="hidden"][name="record['+rid+'][disabled]"]');
+        hiddenInput.value = checkbox.checked ? 0 : 1;
+    }
+</script>
