Deleted duplicate attributes for html tags.

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -54,7 +54,7 @@
         {% endif %}
         <tr>
             <td>{% trans %}Description{% endtrans %}</td>
-            <td><textarea class="form-control form-control-sm" rows="4" cols="30" class="inputarea" name="descr">{{ description }}</textarea>
+            <td><textarea class="form-control form-control-sm" rows="4" cols="30" name="descr">{{ description }}</textarea>
             </td>
         </tr>
         <tr>
