--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -57,7 +57,7 @@
         </tr>
         <tr>
             <td>{% trans %}Description{% endtrans %}</td>
-            <td><textarea class="form-control form-control-sm" rows="4" cols="30" class="inputarea" name="description">{{ user['descr'] }}</textarea>
+            <td><textarea class="form-control form-control-sm" rows="4" cols="30" name="description">{{ user['descr'] }}</textarea>
             </td>
         </tr>
         <tr>
