--- a/templates/list_log_users.html
+++ b/templates/list_log_users.html
@@ -16,7 +16,7 @@
                 <input name="name" id="name" type="text" class="form-control form-control-sm"
                        placeholder="{% trans %}Search logs by user{% endtrans %}"
                        {% if name %}value="{{ name }}" %} {% endif %}>
-                <button for="name" type="submit" class="btn btn-primary btn-sm" type="button"><i
+                <button for="name" type="submit" class="btn btn-primary btn-sm"><i
                         class="bi bi-search"></i>
                     {% trans %}Search{% endtrans %}
                 </button>
