Minor code cleanup.

--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -35,12 +35,9 @@
             <td><input type="radio" name="zone[{{ zone['id']}}][target]" value="new_owner"></td>
             <td>
                 <select class="form-select form-select-sm" name="zone[{{ zone['id']}}][newowner]">
-
                     {% for user in users %}
-                    <option value='{{ user[' id
-                    '] }}">{{ user["fullname"]}}</option>
+                    <option value='{{ user['id'] }}">{{ user["fullname"]}}</option>
                     {% endfor %}
-
                 </select>
             </td>
         </tr>
