--- a/templates/search.html
+++ b/templates/search.html
@@ -162,7 +162,7 @@
         </tbody>
     </table>
 
-    {% if total_zones > iface_rowamount %}
+    {% if total_records > iface_rowamount %}
     {% set max_visible_pages = 9 %}
     {% set total_records_pages = (total_records / iface_rowamount) | round(0, 'ceil') %}
     {% set half_visible_pages = max_visible_pages // 2 %}
@@ -187,12 +187,12 @@
             {% endif %}
             {% endfor %}
 
-            {% if total_zone_pages > records_end_page %}
+            {% if total_records_pages > records_end_page %}
             <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">..</a></li>
             <li class="page-item"><a class="page-link" href="javascript:do_search_with_records_page({{ total_zone_pages }})">{{ total_zone_pages }}</a></li>
             {% endif %}
 
-            {% if records_page < total_zone_pages %}
+            {% if records_page < total_records_pages %}
             <li class="page-item"><a class="page-link" href="javascript:do_search_with_records_page({{ records_page + 1 }})">{% trans %}Next{% endtrans %}</a></li>
             {% endif %}
         </ul>
@@ -201,7 +201,7 @@
 </div>
 {% endif %}
 
-{% if query is not empty and (not has_records or not has_zones) %}
+{% if query is not empty and (not has_records and not has_zones) %}
 <hr>
 {% trans %}No results found{% endtrans %}
 {% endif %}
