--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -70,7 +70,7 @@
         {% endif %}
         <tr>
             <td>&nbsp;</td>
-            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">
+            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Add{% endtrans %}">
             </td>
     </table>
 </form>
