--- a/templates/dnssec_delete_key.html
+++ b/templates/dnssec_delete_key.html
@@ -39,7 +39,7 @@
 {% trans %}Bits{% endtrans %}: {{ key_info[4] }}<br>
 {% trans %}Active{% endtrans %}: {% trans %}%active%{% endtrans %}
 
-<p class="pt-3">{% trans %}Are you sure?{% endtrans %}</p>
+<p class="pt-3"><strong>{% trans %}Are you sure?{% endtrans %}</strong></p>
 <input class="btn btn-primary btn-sm" type="button"
        onClick="location.href='dnssec_delete_key.php?id={{ zone_id }}&key_id={{ key_id }}&confirm=1'"
        value="{% trans %}Yes{% endtrans %}">
