--- a/templates/dnssec_edit_key.html
+++ b/templates/dnssec_edit_key.html
@@ -47,7 +47,7 @@
 {% trans %}Algorithm{% endtrans %}: {{ algorithms[key_info[3]] }}<br>
 {% trans %}Bits{% endtrans %}: {{ key_info[4] }}<br>
 {% trans %}Active{% endtrans %}: {% trans %}%active%{% endtrans %}<br>
-<p>{% trans %}Are you sure?{% endtrans %}</p>
+<p class="pt-3"><strong>{% trans %}Are you sure?{% endtrans %}</strong></p>
 <input class="btn btn-primary btn-sm" type="button"
        onClick="location.href='dnssec_edit_key.php?id={{ zone_id }}&key_id={{ key_id }}&confirm=1'"
        value="{% trans %}Yes{% endtrans %}">
