--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -27,7 +27,7 @@
             <td>
                 <div class="input-group">
                     <input class="form-control form-control-sm" type="password" id="password" name="password"
-                           {% if not perm_passwd_edit_others and (edit_own_perm and user['uid'] != session_user_id) %}disabled{% endif %}>
+                           {% if (not perm_passwd_edit_others and (edit_own_perm and user['uid'] != session_user_id) or use_ldap_checked) %}disabled{% endif %}>
                     <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('password', 'eye')"><i class="bi bi-eye-fill" id="eye"></i></button>
                 </div>
             </td>
@@ -64,6 +64,13 @@
             <td>{% trans %}Enabled{% endtrans %}</td>
             <td><input class="form-check-input" type="checkbox" name="active" value="1" {{ check }}></td>
         </tr>
+        {% if ldap_use %}
+        <tr>
+            <td>{% trans %}LDAP Authentication{% endtrans %}</td>
+            <td><input class="form-check-input" id="ldap" type="checkbox" name="use_ldap" value="1"
+                       onclick="disablePasswordField()" {{ use_ldap_checked }}></td>
+        </tr>
+        {% endif %}
         <tr>
             <td>&nbsp;</td>
             <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">
