--- a/templates/users.html
+++ b/templates/users.html
@@ -67,7 +67,7 @@
 
             {% if ldap_use %}
             {% if permissions['user_is_ueberuser'] %}
-            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }}></td>
+            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }} disabled></td>
             {% else %}
             {% if use_ldap == "checked" %}
             <td>Yes</td>
