--- a/templates/search.html
+++ b/templates/search.html
@@ -189,7 +189,7 @@
 
             {% if total_records_pages > records_end_page %}
             <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">..</a></li>
-            <li class="page-item"><a class="page-link" href="javascript:do_search_with_records_page({{ total_zone_pages }})">{{ total_zone_pages }}</a></li>
+            <li class="page-item"><a class="page-link" href="javascript:do_search_with_records_page({{ total_records_pages }})">{{ total_records_pages }}</a></li>
             {% endif %}
 
             {% if records_page < total_records_pages %}
