feat: display filtered and total zone counts in list zones template, related to #527

--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -6,7 +6,7 @@
 </nav>
 
 <h5 class="mb-3">{% trans %}List zones{% endtrans %}</h5>
-<div class="pb-3 text-secondary">{% trans %}Total number of zones:{% endtrans %} {{ count_zones_view }}</div>
+<div class="pb-3 text-secondary">{% trans %}Total number of zones:{% endtrans %} {{ count_zones_all_letterstart }} / {{ count_zones_view }}</div>
 
 {% if count_zones_view > iface_rowamount %}
 <div>
